# podfilter

./: .gitignore  =2.0.0  AGENTS.md  README.md  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  robot-acceptance.yml
acceptance/resources/: browser.resource
acceptance/sql/: users.sql
acceptance/suites/: landing_and_auth.robot
docs/bugs/: login-session-not-applied.md  register-button-404.md
docs/features/: ci-robot-acceptance.md  robot-acceptance-tests.md  serve-favicon.md
docs/prs/: fix-dashboard-session.md  fix-register-route.md
podfilter/: __init__.py  app.py  auth.py  database.py  utils.py
podfilter/models/: __init__.py
podfilter/routes/: __init__.py  auth.py  export.py  feeds.py  web.py
podfilter/static/css/: style.css
podfilter/static/js/: app.js
podfilter/templates/: 404.html  500.html  base.html  dashboard.html  feeds.html  filters.html  index.html  login.html  register.html
tests/: test_auth_utils.py  test_utils.py
